@@ -7,7 +7,7 @@
     <packaging>pom</packaging>
     <groupId>com.huaweicloud.sdk</groupId>
     <artifactId>huaweicloud-sdk</artifactId>
-    <version>3.1.106</version>
+    <version>3.1.107</version>
     <name>Huawei Cloud SDK for Java Parent</name>
     <description>Huawei Cloud SDK for Java</description>
     <url>https://github.com/huaweicloud/huaweicloud-sdk-java-v3</url>
@@ -55,14 +55,13 @@
         <snakeyaml.version>2.0</snakeyaml.version>
         <jackson.version>2.14.2</jackson.version>
         <okhttp.version>4.12.0</okhttp.version>
-        <bgmprovider.version>1.0.7</bgmprovider.version>
+        <bgmprovider.version>1.1.2</bgmprovider.version>
         <junit.version>4.13.1</junit.version>
         <slf4j.version>1.7.36</slf4j.version>
         <logback.version>1.3.12</logback.version>
         <wiremock.version>2.35.1</wiremock.version>
         <mongo-java-driver.version>3.12.11</mongo-java-driver.version>
         <spring-boot.version>2.7.12</spring-boot.version>
-        <bcprov-jdk18on.version>1.78</bcprov-jdk18on.version>
     </properties>
 
     <dependencyManagement>
@@ -116,17 +115,6 @@
                 <groupId>org.openeuler</groupId>
                 <artifactId>bgmprovider</artifactId>
                 <version>${bgmprovider.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.bouncycastle</groupId>
-                        <artifactId>bcprov-jdk15on</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.bouncycastle</groupId>
-                <artifactId>bcprov-jdk18on</artifactId>
-                <version>${bcprov-jdk18on.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -187,38 +175,6 @@
     </build>
 
     <profiles>
-        <profile>
-            <id>jdk17</id>
-            <activation>
-                <jdk>17</jdk>
-            </activation>
-            <properties>
-                <add.args>
-                    --add-exports=java.base/sun.security.x509=ALL-UNNAMED
-                    --add-opens=java.base/sun.security.util=ALL-UNNAMED
-                    --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
-                    --add-exports=java.base/sun.security.action=ALL-UNNAMED
-                    --add-exports=java.base/sun.security.provider.certpath=ALL-UNNAMED
-                    --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
-                    --add-opens=java.base/javax.crypto=ALL-UNNAMED
-                    --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
-                    --add-exports=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED
-                    --add-exports=jdk.crypto.ec/sun.security.ec=java.base
-                </add.args>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk11</id>
-            <activation>
-                <jdk>11</jdk>
-            </activation>
-            <properties>
-                <add.args>
-                    --add-exports=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED
-                    --add-exports=jdk.crypto.ec/sun.security.ec=java.base
-                </add.args>
-            </properties>
-        </profile>
         <profile>
             <id>release</id>
             <build>
